--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Tarek S.",
   "license": "ISC",
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
