--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Tarek S.",
   "license": "ISC",
   "engines": {
-    "node": "14.x"
+    "node": "18.12.1"
   },
   "dependencies": {
     "body-parser": "^1.20.1",
